# NexusPlatform

./: .gitignore  Nexus.code-workspace  README.md
docs/: 01-设计愿景.md  02-使用指南.md  03-开发指南.md  README.md
docs/_archive/: architecture_roadmap_v3.md  architecture_roadmap_v4.md  development_plan_phase1.md  standards_v1.md
docs/api/: 01-Nexus_Core_API.md
docs/architecture/: 01-System_Overview.md  02-Code_Trace_Ping.md  03-Dynamic_Plugin_System.md
docs/development/: 01-Setup_and_Build.md  02-Contribution_Flow.md  03-Creating_New_Tools.md  04-AI_Guidelines.md  05-Versioning_Strategy.md  06-NexusUI_Standard.md
docs/standards/: ARCHITECTURE.md
nexus-core/: .gitignore  00-架构设计与规划.md  README.md  requirements.txt  setup.py
nexus-core/nexus_core/: cli.py  database.py  engine.py  interfaces.py  pcap_reader.py  utils.py
nexus-platform/: .gitignore  CHANGELOG.md  COMPILING.md  README.md  requirements.txt  run.py
nexus-platform/.github/: copilot-instructions.md
nexus-platform/backend/: app.py  run.py
nexus-platform/config/: settings.json  versions.json
nexus-platform/docs/: 03-开发指南.md  architecture_roadmap_v2.md  architecture_roadmap_v5.md
nexus-platform/frontend/: index.html  package-lock.json  package.json
nexus-platform/scripts/: README.md  build.ps1  build.sh  run.ps1  (+5 more)
nexus-sdk/: README.md  pyproject.toml
nexus-sdk/src/nexus_sdk/: __init__.py  decorators.py  exceptions.py  types.py
scripts/: 00_install_dev.ps1  05_compile_plugins.ps1  10_run_dev.ps1  20_build_debug.ps1  25_build_and_run_debug.ps1  30_build_release.ps1  40_sign_release.ps1  99_clean.ps1
(+121 files in other folders)
